# ssh-portfolio

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  default.nix  deny.toml  flake.nix  rust-toolchain  rustfmt.toml
.cargo/: cargo-rustc-patch.sh  config.toml
.config/: config.json5
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  nix-flake-update.yml
.github/workflows/scripts/: free_space.sh
patches/: ratatui-image+8.0.1.patch
patches/ratatui-image-8.0.2/: export_picker_fields.patch
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  errors.rs  keycode.rs  landing.rs  logging.rs  main.rs  ssh.rs  tui.rs
src/atproto/: mod.rs
src/components/: blog.rs  cards.rs  cat.rs  content.rs  selection_list.rs  tabs.rs  version_info.rs
src/tui/: backend.rs  mod.rs  status.rs  terminal.rs
www/: .gitignore  bun.nix  eslint.config.ts  package.json  svelte.config.js  svelte.config.ts
www/src/: app.css
www/src/lib/components/: checkIcon.svelte  copyIcon.svelte  launchIcon.svelte
www/src/routes/: +layout.svelte  +page.svelte
www/static/: credits.txt
www/static/fonts/: IosevkaSS12.css
